Bug 71657 - [Chromium] Missing WebMediaStreamDescriptor::label() implementation
Summary: [Chromium] Missing WebMediaStreamDescriptor::label() implementation
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit API (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks: 56459
  Show dependency treegraph
 
Reported: 2011-11-07 01:35 PST by Henrik Grunell
Modified: 2011-11-09 09:08 PST (History)
4 users (show)

See Also:


Attachments
Patch (1.52 KB, patch)
2011-11-07 01:48 PST, Henrik Grunell
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Henrik Grunell 2011-11-07 01:35:32 PST
WebMediaStreamDescriptor::label() is not implemented, gives link error.
Comment 1 Henrik Grunell 2011-11-07 01:48:29 PST
Created attachment 113834 [details]
Patch
Comment 2 Adam Barth 2011-11-09 08:26:55 PST
Comment on attachment 113834 [details]
Patch

I'm surprised it compiles without this patch.
Comment 3 WebKit Review Bot 2011-11-09 09:07:57 PST
Comment on attachment 113834 [details]
Patch

Clearing flags on attachment: 113834

Committed r99726: <http://trac.webkit.org/changeset/99726>
Comment 4 WebKit Review Bot 2011-11-09 09:08:02 PST
All reviewed patches have been landed.  Closing bug.