Adding missing implementation of WebMediaStreamDescriptor::label().

[Chromium] Missing WebMediaStreamDescriptor::label() implementation
https://bugs.webkit.org/show_bug.cgi?id=71657

Patch by Henrik Grunell <grunell@chromium.org> on 2011-11-09
Reviewed by Adam Barth.

* src/WebMediaStreamDescriptor.cpp:
(WebKit::WebMediaStreamDescriptor::label):

Canonical link: https://commits.webkit.org/88293@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99726 268f45cc-cd09-0410-ab3c-d52691b4dbfc